--- a/index.html
+++ b/index.html
@@ -3,52 +3,177 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>মোঃ রবিউল ইসলাম - পারসোনাল ওয়েবসাইট</title>
+    <title>মোঃ রবিউল ইসলাম | গণিত ও প্রযুক্তি</title>
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background-color: #f4f4f9; color: #333; }
-        header { background-color: #2c3e50; color: white; padding: 20px 0; text-align: center; }
-        nav { text-align: center; padding: 10px; background-color: #34495e; }
-        nav a { color: white; text-decoration: none; margin: 0 15px; font-weight: bold; }
-        .container { max-width: 800px; margin: 20px auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        h1, h2 { color: #2c3e50; }
-        .blog-post { border-bottom: 1px solid #ddd; padding-bottom: 10px; margin-bottom: 10px; }
-        footer { text-align: center; padding: 20px; background-color: #2c3e50; color: white; margin-top: 20px; }
+        /* মূল ডিজাইন */
+        body {
+            font-family: 'Hind Siliguri', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f2f5;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        /* হেডার বা উপরের অংশ */
+        header {
+            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%); /* নীল গ্রেডিয়েন্ট */
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            margin: 0;
+            font-weight: 700;
+        }
+
+        header p {
+            font-size: 1.2em;
+            opacity: 0.9;
+            margin-top: 10px;
+        }
+
+        /* নেভিগেশন বার */
+        nav {
+            background-color: white;
+            text-align: center;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        nav a {
+            color: #1e3c72;
+            text-decoration: none;
+            margin: 0 20px;
+            font-weight: 600;
+            font-size: 1.1em;
+            transition: color 0.3s;
+        }
+
+        nav a:hover {
+            color: #ff6b6b; /* মাউস নিলে লালচে হবে */
+        }
+
+        /* কন্টেইনার */
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            padding: 0 20px;
+        }
+
+        /* সেকশন কার্ড ডিজাইন */
+        .card {
+            background: white;
+            padding: 30px;
+            margin-bottom: 30px;
+            border-radius: 12px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.05);
+            transition: transform 0.3s ease; /* এনিমেশন */
+        }
+
+        .card:hover {
+            transform: translateY(-5px); /* মাউস নিলে একটু উপরে উঠবে */
+        }
+
+        h2 {
+            color: #1e3c72;
+            border-bottom: 2px solid #ff6b6b;
+            display: inline-block;
+            padding-bottom: 5px;
+            margin-bottom: 20px;
+        }
+
+        /* ব্লগ পোস্ট ডিজাইন */
+        .blog-post {
+            background: #f8f9fa;
+            border-left: 5px solid #1e3c72;
+            padding: 15px 20px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+        }
+
+        .blog-post h3 {
+            margin-top: 0;
+            color: #2c3e50;
+        }
+
+        .tag {
+            background-color: #e1ecf4;
+            color: #1e3c72;
+            padding: 2px 8px;
+            border-radius: 4px;
+            font-size: 0.85em;
+            font-weight: bold;
+        }
+
+        footer {
+            text-align: center;
+            padding: 40px;
+            background-color: #2c3e50;
+            color: #bdc3c7;
+            margin-top: 50px;
+        }
     </style>
 </head>
 <body>
 
     <header>
-        <h1>স্বাগতম, আমি মোঃ রবিউল ইসলাম</h1>
-        <p>গণিত বিভাগ | ঢাকা কলেজ</p>
+        <h1>মোঃ রবিউল ইসলাম</h1>
+        <p>গণিত বিভাগ, ঢাকা কলেজ | টেক লাভার & কন্টেন্ট ক্রিয়েটর</p>
     </header>
 
     <nav>
         <a href="#about">আমার সম্পর্কে</a>
-        <a href="#blog">ব্লগ ও লেখালেখি</a>
+        <a href="#blog">লেখালেখি</a>
         <a href="#contact">যোগাযোগ</a>
     </nav>
 
-    <div class="container" id="about">
-        <h2>আমার সম্পর্কে</h2>
-        <p>আসসালামু আলাইকুম। আমি ঢাকা কলেজে গণিত বিভাগে পড়ছি। আমার আগ্রহের বিষয়গুলোর মধ্যে রয়েছে ভূমি পরিমাপ আইন, পিসি হার্ডওয়্যার এবং ইতিহাস। এই ওয়েবসাইটে আমি আমার বিভিন্ন চিন্তাভাবনা এবং লেখা শেয়ার করব।</p>
-    </div>
-
-    <div class="container" id="blog">
-        <h2>আমার লেখালেখি</h2>
-        
-        <div class="blog-post">
-            <h3>১. ভূমি পরিমাপের প্রাথমিক ধারণা</h3>
-            <p>আমাদের দেশে ভূমি পরিমাপের জন্য সিএস (CS) এবং আরএস (RS) খতিয়ান বোঝা খুব জরুরি...</p>
+    <div class="container">
+        <div class="card" id="about">
+            <h2>আমার সম্পর্কে 👋</h2>
+            <p>আসসালামু আলাইকুম! আমি <strong>রবিউল</strong>। ঢাকার ঐতিহ্যবাহী ঢাকা কলেজে গণিত বিভাগে পড়াশোনা করছি। পড়াশোনার পাশাপাশি আমি প্রযুক্তির খুঁটিনাটি জানতে ভালোবাসি।</p>
+            <p>আমার বিশেষ আগ্রহের জায়গাগুলো হলো:</p>
+            <ul style="line-height: 2;">
+                <li>🖥️ পিসি হার্ডওয়্যার ও বিল্ড গাইড</li>
+                <li>📏 ভূমি পরিমাপ আইন (CS, RS খতিয়ান)</li>
+                <li>🕰️ বিশ্ব ইতিহাস ও জিওপলিটিক্স</li>
+            </ul>
         </div>
 
-        <div class="blog-post">
-            <h3>২. পিসি বিল্ডিং গাইড ২০২৬</h3>
-            <p>বাজেটের মধ্যে সেরা পিসি বানাতে হলে প্রসেসর এবং মাদারবোর্ডের সঠিক কম্বিনেশন জানতে হবে...</p>
+        <div class="card" id="blog">
+            <h2>আমার লেখালেখি 📝</h2>
+            
+            <div class="blog-post">
+                <span class="tag">ভূমি আইন</span>
+                <h3>১. ভূমি পরিমাপের প্রাথমিক ধারণা</h3>
+                <p>আমাদের দেশে জমি জমার ঝামেলা এড়াতে সিএস (CS) এবং আরএস (RS) খতিয়ান বোঝা খুব জরুরি। সাধারণ মানুষ অনেক সময় দালালের খপ্পরে পড়েন শুধুমাত্র এই বেসিক বিষয়গুলো না জানার কারণে...</p>
+            </div>
+
+            <div class="blog-post">
+                <span class="tag">টেকনোলজি</span>
+                <h3>২. ২০২৬ সালের সেরা বাজেট পিসি বিল্ড</h3>
+                <p>আপনি যদি ৩০ হাজার টাকার মধ্যে গেমিং পিসি বানাতে চান, তবে প্রসেসর হিসেবে Ryzen 5 5600GT হতে পারে সেরা চয়েস। কেন? আসুন বিস্তারিত জানি...</p>
+            </div>
+        </div>
+
+        <div class="card" id="contact" style="text-align: center;">
+            <h2>যোগাযোগ 📩</h2>
+            <p>আমার সাথে যোগাযোগ করতে পারেন নিচের মাধ্যমগুলোতে:</p>
+            <p>📧 ইমেইল: robivhai@example.com</p>
+            <p>📍 লোকেশন: শনির আখড়া, ঢাকা</p>
         </div>
     </div>
 
     <footer>
-        <p>&copy; ২০২৬ মোঃ রবিউল ইসলাম | GitHub Pages দিয়ে তৈরি</p>
+        <p>কপিরাইট © ২০২৬ মোঃ রবিউল ইসলাম</p>
+        <small>GitHub Pages দিয়ে ভালোবাসা ❤️ ও কোডিং দিয়ে তৈরি</small>
     </footer>
 
 </body>
