--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         nav a {
             color: #1e3c72;
             text-decoration: none;
-            margin: 0 10px; /* মোবাইলে জায়গা ঠিক রাখতে একটু কমানো হলো */
+            margin: 0 10px;
             font-weight: 600;
             font-size: 1.1em;
             display: inline-block;
@@ -122,7 +122,8 @@
     <nav>
         <a href="#about">পরিচয়</a>
         <a href="#services">সার্ভিস</a>
-        <a href="#blog">লেখালেখি</a> <a href="#contact">যোগাযোগ</a>
+        <a href="#blog">লেখালেখি</a> 
+        <a href="#contact">যোগাযোগ</a>
     </nav>
 
     <div class="container">
@@ -145,6 +146,21 @@
             <h2>আমার লেখালেখি ✍️</h2>
             <p>প্রযুক্তি ও সমসাময়িক বিষয় নিয়ে আমার কিছু লেখা:</p>
             
+            <div class="blog-card-item" style="border: 1px solid #ddd; padding: 15px; border-radius: 8px; background: #f9f9f9; cursor: pointer; margin-bottom: 20px;" onclick="window.location.href='ai-revolution.html';">
+                <h3 style="margin: 0 0 10px 0; font-size: 1.3em;">
+                    <a href="ai-revolution.html" style="text-decoration: none; color: #1e3c72;">
+                        AI না জানলে যেভাবে অকেজো হয়ে পড়বেন: একবিংশ শতাব্দীর নীরব বিল্পব
+                    </a>
+                </h3>
+                <p style="margin: 0; font-size: 0.95em; color: #555;">
+                    ভবিষ্যতের পৃথিবী এবং AI: টিকে থাকার নতুন লড়াই। যারা এখন AI শিখবে না, তারা কি হারিয়ে যাবে? বিস্তারিত পড়ুন...
+                </p>
+                <br>
+                <a href="ai-revolution.html" style="color: #ff6b6b; font-weight: bold; text-decoration: none;">
+                    পুরোটা পড়ুন &rarr;
+                </a>
+            </div>
+
             <div class="blog-card-item" style="border: 1px solid #ddd; padding: 15px; border-radius: 8px; background: #f9f9f9; cursor: pointer;" onclick="window.location.href='ram-price-2026.html';">
                 <h3 style="margin: 0 0 10px 0; font-size: 1.3em;">
                     <a href="ram-price-2026.html" style="text-decoration: none; color: #1e3c72;">
@@ -152,14 +168,16 @@
                     </a>
                 </h3>
                 <p style="margin: 0; font-size: 0.95em; color: #555;">
-                    বর্তমানে র‍্যামের দাম কেন আকাশচুম্বী? এআই বিপ্লব এবং ডলার সংকট কীভাবে প্রভাব ফেলছে? বিস্তারিত পড়ুন...
+                    বর্তমানে র‍্যামের দাম কেন আকাশচুম্বী? এআই বিপ্লব এবং ডলার সংকট কীভাবে প্রভাব ফেলছে? বিস্তারিত পড়ুন...
                 </p>
                 <br>
                 <a href="ram-price-2026.html" style="color: #ff6b6b; font-weight: bold; text-decoration: none;">
-                    পুরোটা পড়ুন &rarr;
+                    পুরোটা পড়ুন &rarr;
                 </a>
             </div>
-            </div>
+
+        </div>
+
         <div class="card" id="contact">
             <h2>যোগাযোগ 📞</h2>
             <p>যেকোনো প্রয়োজনে আমার সাথে যোগাযোগ করতে পারেন:</p>
